# powerflow

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
build-baseline-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  PowerFlowSolver  PowerFlowUnitTests-b12d07c_include.cmake  PowerFlowUnitTests-b12d07c_tests.cmake  YBusDumper  cmake_install.cmake  compile_commands.json
build-baseline-debug/Testing/Temporary/: CTestCostData.txt
build-baseline-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  PowerFlowSolver  PowerFlowUnitTests  PowerFlowUnitTests-b12d07c_include.cmake  PowerFlowUnitTests-b12d07c_tests.cmake  YBusDumper  cmake_install.cmake  compile_commands.json
build-baseline-release/Testing/Temporary/: CTestCostData.txt
build-sanitizers/: CMakeCache.txt  CTestTestfile.cmake  Makefile  PowerFlowUnitTests-b12d07c_include.cmake  PowerFlowUnitTests-b12d07c_tests.cmake  cmake_install.cmake  compile_commands.json
build-sanitizers/Testing/Temporary/: CTestCostData.txt
core/linalg/: matrix_dense.hpp  matrix_sparse_csr.hpp  vector.hpp
core/models/: branch.hpp  bus.hpp  capacitor.hpp  distributed_load.hpp  load.hpp  phase_config.hpp  regulator.hpp  transformer.hpp  ybus_builder.cpp  ybus_builder.hpp
core/parsers/: capacitor_parser.cpp  capacitor_parser.hpp  distributed_load_parser.cpp  distributed_load_parser.hpp  line_parser.cpp  line_parser.hpp  load_parser.cpp  load_parser.hpp  parser_utils.hpp  phase_config_parser.cpp  phase_config_parser.hpp  regulator_parser.cpp  regulator_parser.hpp  transformer_parser.cpp  transformer_parser.hpp
core/solver/: convergence.hpp  jacobian_builder.cpp  jacobian_builder.hpp  newton_raphson.cpp  newton_raphson.hpp
core/utils/: path_utils.hpp
feeder34/: ieee_34_node_test_feeder.docx
feeder34/data/: cap_data.csv  config.csv  distributed_load_data.csv  document_text.txt  line_data.csv  line_matrices.csv  regulator_data.csv  spot_load_data.csv  transformer_data.csv
feeder34/scripts/: build_grid_csv.py  clean.py  scrape_docx.py
tests/: perf_benchmark.cpp  test_real_grid.cpp  test_sparse_complex.cpp  test_sparse_matrix.cpp  ybus_dumper.cpp
